src/objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <label>Asset Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due__c</fullName>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Reported</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No equipment by that name exists</errorMessage>
            <filterItems>
                <field>Equipment__c.Replacement_Part__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Search for the equipment for this work order.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Life</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Work Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Work Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>